# rust-template

./: .gitignore  COMPLIANCE.org  CONTRIBUTING.org  CUSTOMIZING.md  CUSTOMIZING.org  Cargo.toml  ERROR_HANDLING.md  GETTING_STARTED.md  GETTING_STARTED.org  README.org  compliance-check.sh  config.example.toml  config.template.json  crate-add.sh  flake.nix  llms.org  new-project.sh  rustfmt.toml  script-common.sh  tasks.org  tasks.org_archive  template-application.org  test-crate-add.sh
.cargo-husky/hooks/: pre-commit
.github/workflows/: reusable-branch-protection.yml  reusable-ci.yml  reusable-dependabot-automerge.yml  reusable-publish.yml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/tests/: integration_test.rs
crates/foundation/: Cargo.toml  USAGE.org
crates/foundation-derive/: Cargo.toml
crates/foundation-derive/src/: lib.rs
crates/foundation/src/: app.rs  config.rs  lib.rs  logging.rs
crates/foundation/src/auth/: discovery.rs  handlers.rs  middleware.rs  mod.rs  types.rs
crates/foundation/src/server/: health.rs  me.rs  metrics.rs  mod.rs  openapi.rs  runner.rs  shutdown.rs  spa.rs  systemd.rs
crates/foundation/tests/: config_test.rs  logging_test.rs  server_integration.rs
crates/foundation/tests/helpers/: mod.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  logging.rs
crates/web/src/: config.rs  logging.rs  main.rs  web_base.rs
crates/web/tests/: integration_test.rs
docs/: compliance.org  customizing.org  getting-started.org
nix/lib/: mkDarwinService.nix  mkNixosService.nix  mkRustProject.nix  service-options.nix
template/: .gitignore  CONTRIBUTING.org  Cargo.toml  README.org  config.example.toml  flake.nix  justfile  llms.org
template/.cargo-husky/hooks/: pre-commit
template/.github/: branch-protection.json
template/.github/workflows/: branch-protection.yml  ci.yml  dependabot-automerge.yml  publish.yml
template/crates/cli/: Cargo.toml  workspace-deps.toml
template/crates/cli/src/: config.rs  main.rs
template/crates/cli/tests/: integration_test.rs
template/crates/daemon/: Cargo.toml
template/crates/daemon/src/: config.rs  main.rs  web_base.rs
template/crates/daemon/tests/: integration_test.rs
template/crates/lib/: Cargo.toml  workspace-deps.toml
template/crates/lib/src/: logging.rs
template/crates/server/: Cargo.toml  workspace-deps.toml
template/crates/server/src/: auth.rs  config.rs  main.rs  web_base.rs
template/crates/server/tests/: integration_test.rs
template/crates/web/: Cargo.toml
template/crates/web/src/: auth.rs  config.rs  lib.rs  logging.rs  main.rs  web_base.rs
template/crates/web/tests/: integration_test.rs
template/docs/: systemd.org
template/frontend/public/: index.html  style.css
template/frontend/src/: Main.elm
template/nix/modules/: daemon.nix  darwin-daemon.nix  darwin-server.nix  nixos-daemon.nix  nixos-server.nix  web.nix
tests/example-cli/: Cargo.toml
tests/example-cli/src/: config.rs  main.rs
tests/example-cli/tests/: integration.rs
tests/example-server/: Cargo.toml
tests/example-server/src/: config.rs  main.rs
