[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/lib",
    "crates/web",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rust-template"

[workspace.dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-journald = "0.3"

# Systemd integration
sd-notify = "0.4"

# Utilities
# tap - Enables method chaining and reduces superfluous local variables
# that only exist to name intermediate results. Prefer .tap() over temporary
# variables when it improves readability.
tap = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Web framework
axum = "0.8"
tokio = { version = "1.41", features = ["full"] }
tokio-listener = { version = "0.5", features = ["axum08"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "set-header"] }

# Testing
tempfile = "3"

# OpenMetrics/Prometheus
prometheus = "0.13"

# OpenAPI
aide = { version = "0.15", features = ["axum", "axum-json", "axum-query", "scalar", "macros"] }
schemars = "0.9"

# Shared library
rust-template-lib = { path = "crates/lib" }
