[package]
name = "rust-template-foundation-derive"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/LoganBarnett/rust-template"
description = "Derive macros for rust-template-foundation."
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
