[package]
name = "rust-template-foundation"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/LoganBarnett/rust-template"
description = "Shared infrastructure for projects spawned from rust-template."
publish = false

[features]
default = []
cli = ["dep:clap", "dep:tracing-subscriber"]
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:prometheus",
    "dep:aide",
    "dep:schemars",
    "dep:serde_json",
    "dep:sd-notify",
    "dep:tracing-subscriber",
    "dep:tracing-journald",
]
auth = [
    "server",
    "dep:openidconnect",
    "dep:reqwest",
    "dep:tower-sessions",
]

[dependencies]
# Always present
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"
home = "0.5"

# CLI feature
clap = { version = "4.5", features = ["derive", "env"], optional = true }

# Server feature
axum = { version = "0.8", optional = true }
tokio = { version = "1.41", features = ["full"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "set-header"], optional = true }
prometheus = { version = "0.13", optional = true }
aide = { version = "0.15", features = ["axum", "axum-json", "axum-query", "scalar", "macros"], optional = true }
schemars = { version = "0.9", optional = true }
serde_json = { version = "1.0", optional = true }
sd-notify = { version = "0.4", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"], optional = true }

# Auth feature
openidconnect = { version = "3", features = ["reqwest"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"], optional = true }
tower-sessions = { version = "0.15", features = ["memory-store"], optional = true }

# Unix-only: journald logging (server feature)
[target.'cfg(unix)'.dependencies]
tracing-journald = { version = "0.3", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.41", features = ["full"] }
