[workspace]

[package]
name = "example-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example-cli"
path = "src/main.rs"

[dependencies]
rust-template-foundation = { path = "../../crates/foundation", features = ["cli"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
