[workspace]

[package]
name = "example-server"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "example-server"
path = "src/main.rs"

[dependencies]
rust-template-foundation = { path = "../../crates/foundation", features = ["auth"] }
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1"
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
tokio-listener = { version = "0.5", features = ["axum08"] }
axum = "0.8"
aide = { version = "0.15", features = ["axum", "axum-json", "scalar", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.9"
prometheus = "0.13"

[dev-dependencies]
tower = "0.5"
serde_json = "1.0"
