[package]
name = "rust-template-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "rust-template-cli"
path = "src/main.rs"

[dependencies]
rust-template-foundation = { workspace = true, features = ["cli"] }
rust-template-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
