[package]
name = "rust-template-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
rust-template-foundation = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
