[package]
name = "rust-template-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rust_template_server"
path = "src/lib.rs"

[[bin]]
name = "rust-template-server"
path = "src/main.rs"

[dependencies]
rust-template-foundation = { workspace = true, features = ["auth"] }
rust-template-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
axum = { workspace = true }
tokio = { workspace = true }
tokio-listener = { workspace = true }
prometheus = { workspace = true }
aide = { workspace = true }
schemars = { workspace = true }
openidconnect = { workspace = true }

[dev-dependencies]
openidconnect = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tower = { workspace = true }
