[package]
name = "rust-template-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
name = "rust_template_web"
path = "src/lib.rs"

[[bin]]
name = "rust-template-web"
path = "src/main.rs"

[dependencies]
rust-template-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals
axum = { workspace = true }
tokio = { workspace = true }
tokio-listener = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }
aide = { workspace = true }
schemars = { workspace = true }
sd-notify = { workspace = true }
openidconnect = { workspace = true }
tower-sessions = { workspace = true }

# tracing-journald connects to the systemd journal socket; unix-only.
[target.'cfg(unix)'.dependencies]
tracing-journald = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
